--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fi">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Samsung Galaxy S10</title>
         <link rel="stylesheet" href="css/main.css">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet"> 
